2008-02-14  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyResolver.cs: Shameless copy of Linker AssemblyResolver
	(with minimal changes) until Cecil got his own. Gendarme resolve
	will be done using rocks (so changes should not affect rules)

2008-02-14  Sebastien Pouliot  <sebastien@ximian.com> 

	* Defect.cs: Remove IMetadataTokenProviderRock (moved to 
	CecilRocks.cs). Add more logic to find source code associated
	with the defect (even if we don't have the instruction for it).
	* MinimalRunner.cs: Removed.
	* Runner.cs: Make some stuff internal for TestRunner.cs
	* TestRunner.cs: New. Runner useful for unit testing as it has
	some internal knowledge about Runner state and provide helpers.

2008-02-13  Sebastien Pouliot  <sebastien@ximian.com> 

	* Defect.cs: Merge Defect and Defect<T> into a non-generic class.
	* MinimalRunner.cs: Move Reset method to Runner.
	* Runner.cs: Adapt for Defect changes and add Reset method.

2008-02-12  Sebastien Pouliot  <sebastien@ximian.com> 

	* Defect.cs: Fix exception argument.
	* IRunner.cs: [ComVisible (false)] at class level (to be moved 
	to assembly-level). Use Cecil's IAnnotationProvider and change 
	back Assemblies to Collection<AssemblyDefinition>. Remove the 
	need to supply IRule to Report overloads (the runner knows which
	rules it is). Add CurrentRuleResult so it's easier to track 
	Success and Failure when writing a rule.
	* MinimalRunner.cs: Add Reset method to help unit testing.
	* Rule.cs: Call String.Format with CultureInfo.InvariantCulture
	* Runner.cs: Implement changes required by IRunner. Make use of
	of On[Assembly|Type|Method] to execute rules. Simplify Run.
	* RunnerEventArgs.cs: Change setters to internal. Rules are not
	allowed to play with those values.

2008-02-12  Sebastien Pouliot  <sebastien@ximian.com>

	* Rule.cs: Renamed similar fields (smell) and don't throw an 
	exception inside Problem and Solution properties (but return a
	string that makes the lack of attribute clear).
